# general-message-pkgs

./: Dockerfile  README.md
object_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
object_msgs/msg/: Object.msg  ObjectPose.msg
object_msgs/srv/: ObjectInfo.srv
object_msgs_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
path_navigation_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
